--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/pamph_board
+spring.datasource.username=k3
+spring.datasource.password=9090opopqw
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
