--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+#Database Configuration
 spring.datasource.url=jdbc:mariadb://localhost:3306/pamph_board
 spring.datasource.username=k3
 spring.datasource.password=9090opopqw
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+#logging Configuration
+logging.level.org.springframework.web = debug
+logging.level.com.example.pamphboard.mapper = debug
