chore: devtools added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #logging Configuration
 logging.level.org.springframework.web = debug
 logging.level.com.example.pamphboard.mapper = debug
+
+#Devtools Configuration
+spring.devtools.restart.enabled=false
