feat: MyBatis 카멜케이스 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ logging.level.com.example.pamphboard.mapper = debug
 
 #Devtools Configuration
 spring.devtools.restart.enabled=false
+
+#MyBatis Configuration
+mybatis.configuration.map-underscore-to-camel-case=true
