chore: logging level 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=9090opopqw
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #logging Configuration
-logging.level.org.springframework.web = debug
+logging.level.org.springframework.web = info
 logging.level.com.example.pamphboard.mapper = debug
 
 #Devtools Configuration
