chore: database 명 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database Configuration
-spring.datasource.url=jdbc:mariadb://localhost:3306/pamph_board
+spring.datasource.url=jdbc:mariadb://localhost:3306/pamph_db
 spring.datasource.username=k3
 spring.datasource.password=9090opopqw
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
