--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Database Configuration
 spring.datasource.url=jdbc:mariadb://localhost:3306/pamph_db
 spring.datasource.username=k3
-spring.datasource.password=9090opopqw
+spring.datasource.password=pamphboard
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #logging Configuration
